# devcontaioner-template-bert-mecab

./: pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
src/: example.py
