[tool.poetry]
name = "devcontaioner-template-bert-mecab"
version = "0.1.0"
description = ""
authors = ["YutaUra <yuuta3594@outlook.jp>"]

[tool.poetry.dependencies]
python = "^3.10"
mecab-python3 = "^1.0.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
